@@ -2,6 +2,7 @@ v1.0.3
 -------------------
 + imdb_person: methods to retrieve birthname, nicknames, body height and spouses
 ! imdb: languages() method was broken due to IMDB site changes
++ imdb_person: added method to retrieve mini bio
 
 v1.0.2 (14.05.2008)
 -------------------
